# kit-automate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: build.bat  build.ps1  build.py  build_config.py  validate_config.py
src/kit_automate/: __init__.py  main.py
src/kit_automate/config/: __init__.py  db_config.py  log_config.py  path_config.py
src/kit_automate/shared/: custom_log.py
tests/: conftest.py
tests/config/: __init__.py  test_config_integration.py  test_critical_config.py
tests/shared/: test_custom_log.py
tests/utils/: __init__.py  test_helpers.py
